added rounded button

--- a/HomeWork_10/HomeWork_Lesson_11/HomeWork_Lesson_11/Base.lproj/Main.storyboard
+++ b/HomeWork_10/HomeWork_Lesson_11/HomeWork_Lesson_11/Base.lproj/Main.storyboard
@@ -266,6 +266,26 @@
                             <constraint firstItem="8GG-yE-7me" firstAttribute="top" secondItem="TXc-cD-dRN" secondAttribute="top" id="zyP-f7-2pB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outletCollection property="roundedButton" destination="8bF-Eq-Kis" collectionClass="NSMutableArray" id="9oq-y9-fhb"/>
+                        <outletCollection property="roundedButton" destination="OsV-0e-cR5" collectionClass="NSMutableArray" id="vzP-Lb-4eR"/>
+                        <outletCollection property="roundedButton" destination="TwK-Ly-xDN" collectionClass="NSMutableArray" id="6aL-q8-bhM"/>
+                        <outletCollection property="roundedButton" destination="p9j-82-CPj" collectionClass="NSMutableArray" id="KGs-ym-DuJ"/>
+                        <outletCollection property="roundedButton" destination="TXc-cD-dRN" collectionClass="NSMutableArray" id="MKV-ki-DLr"/>
+                        <outletCollection property="roundedButton" destination="Sxv-aG-0ua" collectionClass="NSMutableArray" id="7xn-Nw-afh"/>
+                        <outletCollection property="roundedButton" destination="2qN-GX-NVB" collectionClass="NSMutableArray" id="dfc-n7-W6m"/>
+                        <outletCollection property="roundedButton" destination="8GG-yE-7me" collectionClass="NSMutableArray" id="hXX-65-8HZ"/>
+                        <outletCollection property="roundedButton" destination="UlC-3k-Glr" collectionClass="NSMutableArray" id="EqX-dO-X7H"/>
+                        <outletCollection property="roundedButton" destination="eV3-hW-mC7" collectionClass="NSMutableArray" id="7as-qY-sMp"/>
+                        <outletCollection property="roundedButton" destination="qme-EK-HON" collectionClass="NSMutableArray" id="36q-wK-FPU"/>
+                        <outletCollection property="roundedButton" destination="XiO-w4-UUX" collectionClass="NSMutableArray" id="hEc-zN-LZQ"/>
+                        <outletCollection property="roundedButton" destination="dyP-V2-q8B" collectionClass="NSMutableArray" id="aT6-xU-5xf"/>
+                        <outletCollection property="roundedButton" destination="dqb-h1-n7v" collectionClass="NSMutableArray" id="cp0-fm-MiW"/>
+                        <outletCollection property="roundedButton" destination="W8V-Uc-CbS" collectionClass="NSMutableArray" id="2G7-Pa-nEJ"/>
+                        <outletCollection property="roundedButton" destination="0gA-3x-vkc" collectionClass="NSMutableArray" id="Rnn-AY-NjJ"/>
+                        <outletCollection property="roundedButton" destination="XkB-vr-eu1" collectionClass="NSMutableArray" id="SGd-S1-FMg"/>
+                        <outletCollection property="roundedButton" destination="McE-Ef-eVm" collectionClass="NSMutableArray" id="3jR-hk-Gd0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
